[MINOR] hostname in production machines

--- a/src/site/resources/vagrant/prod-backend/Vagrantfile
+++ b/src/site/resources/vagrant/prod-backend/Vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure("2") do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "dev-vagrant"
-  config.vm.hostname = "prod-pipeline-backend-01"
+  config.vm.hostname = "pro-pipeline-be-01"
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
